<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CharacterDetailsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="@dimen/topMargin_profile_image"
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_height"
        android:src="@drawable/rick"
        app:civ_border_width="0dp"
        app:civ_border_color="#FF000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/character_name"/>

    <TextView
        android:layout_marginVertical="@dimen/vertical_distance_name"
        android:id="@+id/character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/name_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintBottom_toTopOf="@id/species_title"/>

    <TextView
        android:layout_marginTop="@dimen/top_distance_details"
        android:id="@+id/species_title"
        app:layout_constraintTop_toBottomOf="@id/character_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/border_distance"
        android:text="@string/species_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/status_title" />

    <TextView
        android:id="@+id/status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/species_title"
        app:layout_constraintStart_toStartOf="@id/species_title"
        android:layout_marginTop="@dimen/top_distance_details"
        android:text="@string/status_title"
        app:layout_constraintBottom_toTopOf="@id/gender_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender_title"
        app:layout_constraintStart_toStartOf="@id/species_title"
        android:text="@string/gender_title"
        app:layout_constraintTop_toBottomOf="@id/status_title"
        android:layout_marginTop="@dimen/top_distance_details" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speceies_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/species_title"
        app:layout_constraintBottom_toBottomOf="@id/species_title"
        android:text="@string/species_detail_string"
        android:layout_marginEnd="@dimen/border_distance"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/status_title"
        app:layout_constraintBottom_toBottomOf="@id/status_title"
        android:text="@string/status_details_string"
        android:layout_marginEnd="@dimen/border_distance"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gender_title"
        app:layout_constraintBottom_toBottomOf="@id/gender_title"
        android:text="@string/gender_details_string"
        android:layout_marginEnd="@dimen/border_distance"
        />

</androidx.constraintlayout.widget.ConstraintLayout>